[tool.poetry]
name = "python-gantt"
version = "0.6.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">3.6"
argparse = "^1.4.0"
clize = ">=2.0"
dateutils = "^0.6.12"
funcsigs = "^1.0.2"
pyparsing = "^2.4.7"
python-dateutil = ">=2.4"
pytz = "^2021.1"
sigtools = "^2.0.2"
svgwrite = ">=1.4.1"

[tool.poetry.dev-dependencies]
tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
